--- a/thesis/intro/intro.tex
+++ b/thesis/intro/intro.tex
@@ -26,21 +26,26 @@
 
 	%larder1993 multidrug resistant mutations in vitro
 
-	In the early days of the epidemic before there were tests to detect the virus, the first sign of HIV was often the onset of AIDS. Opportunistic infections \citep{Moore1996} and death often followed soon after. The median survival time after diagnosis with AIDS was about 1 year if untreated \citep{Rothenberg1987,Vella1992}. Testing for HIV revealed that from the time of infection with HIV, patients had a median survival time of about 10 years without antiretroviral therapy\citep{Deschamps2000,CGAIDSIHIVS2000}. %In patients in Haiti treated for symptoms but not with antiretrovirals, the median time to AIDS was 5.2 years and to death was 7.4 years \citep{Deschamps2000}. Median time to death 7--12 years \citep{CGAIDSIHIVS2000}. %Many types of opportunistic infections and poor survival times \citep{Moore1996}. 4.5 years to AIDS in transfusions \citep{Lui1986}.
+	In the early days of the epidemic before there were tests to detect the virus, the first sign of HIV was often the onset of AIDS. Opportunistic infections \citep{Moore1996} and death often followed soon after. The median survival time after diagnosis with AIDS was about 1 year if untreated \citep{Rothenberg1987,Vella1992}. Testing for HIV revealed that from the time of infection with HIV, patients had a median survival time of about 10 years without antiretroviral therapy\citep{Deschamps2000,Harrison2010,CGAIDSIHIVS2000}. %In patients in Haiti treated for symptoms but not with antiretrovirals, the median time to AIDS was 5.2 years and to death was 7.4 years \citep{Deschamps2000}. Median time to death 7--12 years \citep{CGAIDSIHIVS2000}. %Many types of opportunistic infections and poor survival times \citep{Moore1996}. 4.5 years to AIDS in transfusions \citep{Lui1986}.
+	About 20 years life expectancy in HAART era \citep{AntiretroviralTherapyCohortCollaboration2009,Harrison2010} although catching late and cofounding factors can increase mortality \citep{AntiretroviralTherapyCohortCollaboration2009}
 
 	The successful trial of the reverse transcriptase inhibitor azidothymidine provided the first hope for treatment HIV in 1987 \citep{Fischl1987,Fischl1989,Volberding1990} but it soon became apparent that the fast mutation rate of HIV \citep{Hahn1986,Preston1988,Roberts1988,Mansky1995,Mansky1996,Abram2010,Achuthan2014} and strong selection by drug therapy could quickly create drug-resistant forms of virus in patients receiving single drug therapy \citep{Larder1989,Larder1989a,Land1990,Boucher1990,Richman1990,Richman1991,Fitzgibbon1992,Richman1994,Schuurman1995,Schmit1996}. Median survival time from AIDS diagnosis rose to only about 2 years with therapy \citep{Creagh-Kirk1988,Fischl1989,Moore1992,Vella1992}. Sequential administration of multiple antiretroviral drugs \citep{Kahn1992,Abrams1994,deJong1994,Schmit1996a} did not greatly improve prognosis.
 	 
 	Synergistic combinations of antiretroviral drugs \citep{Dornsife1991,Johnson1991,Cox1994,Feng2009,Jilek2012,Kulkarni2014} and the difficulty of evolving multiple drug resistant mutations therapy \citep{Chow1993,Larder1995} [[more refs here]] meant that therapy using simultaneous combinations of drugs finally began to offer patients more hope of long term survival \citep{Collier1993,Eron1995,Collier1996,Hammer1996,Saravolatz1996,Darbyshire1996,Hammer1997,Gulick1997,Moore1999}.
 
-	The first antiretroviral azidothymidine extended the median survival time after AIDS onset to about 2 years but viral escape from single therapy was common \citep{Creagh-Kirk1988,Fischl1989,Moore1992,Vella1992}.  
+	2/3 life expectency in 2005 \citep{ATCC2008,Keiser2004}. Life expectancy of HIV patients receiving consistent antiretrovirals now approaches control population \citep{vanSighem2010,Nakagawa2013,Johnson2013} but inflammation and drug toxicity, health care burden still a problem \citep{Deeks2013}
+
 	%moore1992 survive >900 days median if >150 CD4 baseline
 
 	HIV rebounds quickly after cessation of therapy \citep{Cillo2014}
 	%Sharp2001 HIV m n o three separate cpz
 	Groups and subtypes?
 
-	new drug for latency bisulfram \citep{Xing2011}
+	early establishment of latent infection \citep{Chun1998a} within 3 days \citep{Whitney2014}
+	SAHA induces latent \citep{Contreras2009}
+	new drug for latency disulfram \citep{Xing2011}
 	modest induction of latent provirus \citep{Cillo2014}
+	characterizing latent reservoir rare cells present in resting actice and macro \citep{Chun1997}
 
 	%Kalish2004 recombination common before big spread
 
@@ -50,8 +55,6 @@
 
 	%The virus was isolated \citep{Barre-Sinoussi1983,Popovic1984,Gallo1984}
 
-	%Sequenced \citep{Wain-Hobson1985}
-
 	%HIV2 \citep{Clavel1986}
 
 	%First HIV antibody test \citep{Safai1984}
@@ -60,6 +63,22 @@
 
 \section{The HIV virus}
 HIV is an enveloped single strand positive-sense retrovirus, an RNA virus which uses reverse transcription to create a DNA intermediate in host cells \citep{Baltimore1970,Temin1970}. Viral encoded integrase protein discovered \citep{Grandgenett1978} and mapped to \threePrime{} end of pol \citep{Panganiban1984,Schwartzberg1984,Donehower1984} through mutation and loss of function.  Mutations at ends also results in defective viruses \citep{Panganiban1983}.
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{LifeCycleJan2012small-1.pdf} %REMOVE%
+	\caption[The HIV lifecycle]{The HIV lifecycle/ [[CAPTION HERE]]}
+	\label{figHIVLifecycle}
+\end{figure}
+
+\begin{figure}
+	\centering
+	%\includegraphics[width=\textwidth]{LifeCycleJan2012small-1.pdf} %REMOVE%
+	[[GENOME FIG]]
+	\caption[The HIV-1 genome]{The HIV-1 genome [[CAPTION HERE]]}
+	\label{figHIVGenome}
+\end{figure}
+
 
 The HIV genome encodes genes for at least two polyproteins and seven proteins:\\ % \gag{} and \pol{}, and seven proteins, \tat{}, \rev{}, \nef{}, \vpr{}, \vif{} and \vpu{}.
 \begin{description}
@@ -92,15 +111,16 @@ The HIV genome encodes genes for at least two polyproteins and seven proteins:\\
 	\item[\env{}]
 		gp160 Env proteins traps CD4 in the endoplasmic reticulum \citep{Crise1990,Bour1991}
 	\item[\tat{}]
+		Tat (transactivator) protein is a transactivator of expression from the HIV-1 long terminal repeat \citep{Sodroski1985,Sodroski1985a}. Virus does not replicate efficiently without this transactivation \citep{Dayton1986,}. and appears to regulate cellular expression such as downregulation of major histocompatibility complex type I expression \citep{Howcroft1993}.
 		%http://www.sciencemag.org/content/260/5112/1320.abstract6
 	\item[\rev{}]
-		Rev trans-activator protein shuttles between the nucleus and cytoplasm \citep{Meyer1994} and causes the export of partially spliced and unspliced viral transcripts \citep{Sodroski1986,Feinberg1986,Knight1987,Malim1988,Gutman1988} from the nucleus through recognition of a structured RNA rev response element \citep{Malim1989,Malim1989a}.
+		Rev (regulator of expression of virion proteins) trans-activator protein shuttles between the nucleus and cytoplasm \citep{Meyer1994} and causes the export of partially spliced and unspliced viral transcripts \citep{Sodroski1986,Feinberg1986,Knight1987,Malim1988,Gutman1988} from the nucleus through recognition of a structured RNA rev response element \citep{Malim1989,Malim1989a}.
 	\item[\nef{}]
 			Nef (negative factor) is a myristoylated membrane associated protein \citep{Yu1992} that is involved in multiple functions. Nef causes endocytosis of the HIV receptors CD4 \citep{Garcia1991,Benson1993,Aiken1994,Lama1999,Ross1999} and CCR5 \citep{Michel2005} and viral surveillance major histocompatibility complex molecules \citep{Schwartz1996,Collins1998,Stumptner-Cuvelette2001,Blagoveshchenskaya2002}. Nef also induces T cell activation through interactions with signaling kinases and the T cell receptor \citep{Xu1999,Schrager1999,Wang2000,Simmons2001,Schrager2002}. In contrast, Nef in most other primate lentiviruses inhibits activation and inflammation \citep{Schindler2006} perhaps indicating that the gain of \vpu{} in HIV-1 and its simian relatives allowed the loss of the immune inhibition traits of \nef{} and contributes to the increased pathogenecity in these viruses \citep{Kirchhoff2008,Kirchhoff2009}.
 	\item[\vpr{}]
 		Vpr (viral protein R)
 	\item[\vif{}]
-		Vif (viral infectivity factor) counteracts the cellular restriction factor APOBEC3G \citep{Sheehy2002} by excluding APOBEC3G from incorporation into the virion \citep{Mariani2003} and causing APOBEC3G to be ubiquitinated and degraded \citep{Sheehy2003,Marin2003,Yu2003}. APOBEC3G is otherwise packaged into virions \citep{Harris2003} and deaminates the HIV genome during reverse transcription causing G-to-A hypermutation \citep{Harris2003,Mangeat2003,Zhang2003,Lecossier2003}.
+		Vif (virion infectivity factor) counteracts the cellular restriction factor APOBEC3G \citep{Sheehy2002} by excluding APOBEC3G from incorporation into the virion \citep{Mariani2003} and causing APOBEC3G to be ubiquitinated and degraded \citep{Sheehy2003,Marin2003,Yu2003}. APOBEC3G is otherwise packaged into virions \citep{Harris2003} and deaminates the HIV genome during reverse transcription causing G-to-A hypermutation \citep{Harris2003,Mangeat2003,Zhang2003,Lecossier2003}.
 	\item[\vpu{}]
 		Vpu (viral protein U) \citep{Cohen1988,Strebel1988} is a small integral membrane protein which has two known functions; degradation of CD4 and downregulation of BST-2 from the cell membrane [[cites]]. Vpu causes cellular CD4 to be ubiquitinated and degraded \citep{Willey1992,Bour1995} which prevents interactions between progeny virus Env and host cell CD4 \citep{Marshall1992,Lama1999,Ross1999,Cortes2002} and superinfection by other viruses \citep{Benson1993}  while also releasing Env proteins from CD4 interactions in the endoplasmic reticulum \citep{Crise1990,Bour1991}. Vpu also counteracts the cellular restriction factor BST-2, which would otherwise interfere with viral budding \citep{Neil2008}. Vpu does not appear to be found in the virion \citep{Strebel1989}.
 		%cd4 degradation 
@@ -122,18 +142,25 @@ long terminal repeats at each end \citep{Hughes1978}. integrates in many locatio
 
 
 %nobels prophage \citep{Lwoff1966} provirus \citep{Temin1976} %dna complementary to rna \citep{Neiman1972} and DNA from RSV transformed cells can transform cells \citep{Hill1972}.
-The virus was sequenced in 1985 \citep{Wain-Hobson1985}.
+The virus was sequenced in 1985 \citep{Wain-Hobson1985,Muesing1985,Ratner1985,Sanchez-Pescador1985}.
+
+Splice classes \citep{Muesing1985} and others?
 
 retrovirus, two single stranded RNA genomes (recombination), RT, integration,
 
 HIV diversification within a single patient in env loop \citep{Holmes1992} positive selection \citep{Bonhoeffer1995,Ross2002} positive selection at same sites over time correlate with slower progression \citep{Wolinsky1996,Ross2002} 1\% distance increase diversity in env per year (decreases later in infection) \citep{Shankarappa1999}
 
-half life of 2 days and $10^9$ CD4 T cells per day \citep{Ho1995,Wei1995}
+%REWORD THIS Highly active antiretroviral therapy (HAART) can suppress HIV-1 replication in infected patients, but the ability of HIV to persist as an inducible reservoir of latent proviruses \citep{Chun1995, Chun1997,Wong1997,Finzi1999, Davey1999,Hamlyn2012,Stoehr2013} obstructs eradication of the virus and functional cure \citep{Richman2009}. These latent proviruses are long lived \citep{Finzi1999,Siliciano2003} and relatively invisible to the immune system \citep{Finzi1997,Chun1997}.
+
+half life of 2 days and $10^9$ CD4 T cells per day \citep{Ho1995,Wei1995,Perelson1997}
+macrophages? half life 1--4 weeks \citep{Perelson1997} 
+\citep{Finzi1997}
+
+
 \section{Integration and latency}
 	cells can produce virus without cell death in vitro \citep{Hoxie1985}
 	first latent HIV \citep{Folks1986}
-\section{Host cell interactions}
-\section{Repetitive elements}
+
 \section{HIV splicing}
 	RNA splicing was first observed in adenovirus \citep{Berget1977,Chow1977}. Improved understanding of HIV and other viruses offers medical benefits. Although HAART treatments have greatly improved HIV prognosis, long-term survival of HIV patients remains reduced by at least a decade compared to the general population \citep{Lohse2007}. In addition HAART does not provide a permanent cure \citep{Richman2009} and the long-term costs of treatment runs into hundreds of thousands of dollars over the lifetime of a patient \citep{Hutchinson2006,Schackman2006}.  Induction or alteration of splicing has been suggested as a potential treatment \citep{Fukuhara2006,Mandal2010} and differential splicing appears to be one factor limiting cross species infection and the development of animal models of HIV \citep{Zheng2003}. 
 
@@ -171,6 +198,8 @@ half life of 2 days and $10^9$ CD4 T cells per day \citep{Ho1995,Wei1995}
 
 
 	%
+\section{Host cell interactions}
+\section{Repetitive elements}
 \section{RNA detection}
 	First HIV antibody test \citep{Safai1984,Sarngadharan1984} First DNA test \citep{Ou1988}
 
