--- a/thesis/penn_thesis_style.sty
+++ b/thesis/penn_thesis_style.sty
@@ -178,6 +178,8 @@
 \usepackage{alltt} %for reproducible report appendices
 \usepackage{upquote} %for reproducible report appendices
 
+\usepackage{siunitx} %\num for numbers
+
 %boxes around figures
 %\usepackage{float}
 %\usepackage[framemethod=tikz]{mdframed}
