--- a/thesis/sherrill-Mix_thesis.tex
+++ b/thesis/sherrill-Mix_thesis.tex
@@ -30,7 +30,7 @@ collaborators
 
 Friends in the Bushman lab and classmates in GCB.
 
-My committee---Nancy Zhang, Yosephy Barash, Kristen Lynch and Michael Malim---have provided guidance and encouragement. Many faculty of GCB mentoring and teaching. Hannah Chervitz and Tiffany Barlow for managing everything and helping manage the layers of bureacracy. Funding from the HIV Immune Networks Team (HINT) consortium P01 AI090935 and NRSA computational genomics training grant T32 HG000046. 
+My committee---Nancy Zhang, Yosephy Barash, Kristen Lynch and Michael Malim---have provided guidance and encouragement. Many faculty of GCB mentoring and teaching. Hannah Chervitz, Tiffany Barlow, Mali Skotheim, Caitlin Greig and Laurie Zimmerman for managing everything and helping manage the layers of bureacracy. Funding from the HIV Immune Networks Team (HINT) consortium P01 AI090935 and NRSA computational genomics training grant T32 HG000046. 
 
 Ram Myers and Mike James
 
@@ -111,6 +111,8 @@ Xiaofen and Otto
 %\addtocontents{toc}{\protect\setcounter{tocdepth}{-1}} % This is so sections in the appendix are not shown in the ToC
 
 
+\subfile{appendices/pacbioReport/pacbioReport.tex}
+
 \subfile{appendices/latencyReport/AdditionalFile4.tex}
 
 %\addtocontents{toc}{\protect\setcounter{tocdepth}{1}} % This is to bring things back to normal
@@ -121,7 +123,7 @@ Xiaofen and Otto
 
 \begin{bibliof}
 
-\bibliographystyle{unsrtnat}
+\bibliographystyle{unsrtnat2}
 \bibliography{refs} % This is the filename of the bibtex bibliography file (it has to be in the same directory as the main LaTeX file)
 
 \end{bibliof}
