Contribution boxes in
git-svn-id: https://microb98.med.upenn.edu/svn/scott/thesis@9964 acd2042c-187b-11de-8279-d8d34a11d372

--- a/thesis/intro/intro.tex
+++ b/thesis/intro/intro.tex
@@ -66,8 +66,8 @@ HIV is an enveloped single strand positive-sense retrovirus, an RNA virus which 
 
 \begin{figure}
 	\centering
-	\includegraphics[width=\textwidth]{LifeCycleJan2012small-1.pdf} %REMOVE%
-	\caption[The HIV lifecycle]{The HIV lifecycle/ [[CAPTION HERE]]}
+	\includegraphics[width=\textwidth]{lifecycle.pdf} %REMOVE%
+	\caption[The HIV lifecycle]{The HIV lifecycle [[CAPTION HERE]]}
 	\label{figHIVLifecycle}
 \end{figure}
 
