--- a/thesis/lamp/lamp.tex
+++ b/thesis/lamp/lamp.tex
@@ -3,7 +3,16 @@
 \graphicspath{{im/}{lamp/im/}}
 
 \chapter{A reverse transcription loop-mediated isothermal amplification assay optimized to detect multiple HIV subtypes}
+
 \label{chapLamp}
+
+\textBox{This chapter was originally published as:\\
+	\citeBox{Ocwieja2015}
+	KE Ocwieja, C Liu, H Bau, FD Bushman and I conceived and designed the experiments. KE Ocwieja, C Liu and J Song performed the experiments. K Ocwieja, J Song and I analyzed the data. I produced the figures. KE Ocwieja, C Liu, H Bau, FD Bushman and I wrote the paper.
+	
+	Supporting information are available at \url{http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0117852\#sec011}
+}
+
 
 \section{Abstract}
 
@@ -104,5 +113,7 @@
 
 	Today rapid assays are available that can report infection efficiently, for example by detecting anti-HIV antibodies in oral samples--however, the nucleic acid-based method presented here has additional potential uses. We envision combining the RT-LAMP assay with simple point-of-care devices for purifying blood plasma \citep{Liu2013} and quantitative analysis of accumulation of fluorescent signals \citep{Liu2011}. In one implementation of the technology, cell phones could be used to capture and analyze results, thereby minimizing equipment costs. Point-of-care devices are available facilitating the concentration of viral RNA from blood plasma or saliva \citep{Liu2011} to allow the detection of the 1000 RNA copy threshold that the WHO defines as virological treatment failure (World Health Organization, Consolidated ARV guidelines, June 2013). Together, these methods will allow assessment of parameters beyond just the presence/absence of infection. Quantitative RT-LAMP assays should allow tracking of responses to medication, detection in neonates (where immunological tests are confounded by presence of maternal antibody), and early detection before seroconversion.
 
+\section{Acknowledgments}
+	We are grateful to members of the Bushman and Bau laboratory for help and suggestions.
 
 \end{document}
