--- a/thesis/latency/latency.tex
+++ b/thesis/latency/latency.tex
@@ -14,6 +14,13 @@
 \chapter{HIV latency and integration site placement in five cell-based models}
 \label{chapLatency}
  
+\textBox{This chapter was originally published as:\\
+	\citeBox{Sherrill-Mix2013}
+	I led the computational analysis, with assistance from CC Berry and N Malani. MK Lewinski, D Looney and J Guatelli analyzed integration sites using IonTorrent sequencing. M Famiglietti, A Bosque and V Planelles prepared DNA from latent and activated T cells using the Central Memory CD4 + model. L Shan, RF Siliciano, MJ Pace, LM Agosto, KE Ocwieja and U O'Doherty contributed data and suggestions. FD Bushman and I planned the overall study. I produced the figures. FD Bushman and I wrote the paper.
+
+	Additional files are available at \url{http://www.retrovirology.com/content/10/1/90/additional}
+}
+
 \section{Abstract}
 	Background: HIV infection can be treated effectively with antiretroviral agents, but the persistence of a latent reservoir of integrated proviruses prevents eradication of HIV from infected individuals. The chromosomal environment of integrated proviruses has been proposed to influence HIV latency, but the determinants of transcriptional repression have not been fully clarified, and it is unclear whether the same molecular mechanisms drive latency in different cell culture models. 
 
