--- a/thesis/pacBio/pacBio.tex
+++ b/thesis/pacBio/pacBio.tex
@@ -4,6 +4,14 @@
 
 \chapter{Dynamic regulation of HIV-1 mRNA populations analyzed by single-molecule enrichment and long-read sequencing}
 \label{chapPacBio}
+\textBox{This chapter was originally published as:
+	\citeBox{Ocwieja2012}	
+	 FD Bushman, K Travers, DR Link, E Schadt, KE Ocwieja and R Mukherjee conceived and designed the experiment. KE Ocwieja and R Custers-Allen carried out sample preparation and experimental validation. P David and J Olson performed single-molecule amplification. K Travers and S Wang performed sequencing. KE Ocwieja, M Brown and I analyzed the data. KE Ocwieja and I produced the figures. KE Ocwieja, FD Bushman and I wrote the manuscript. 
+
+	Supplementary data are available at \url{http://nar.oxfordjournals.org/content/40/20/10345/suppl/DC1}
+}
+
+
 
 \section{Abstract}
 Alternative RNA splicing greatly expands the repertoire of proteins encoded by genomes. Next-generation sequencing (NGS) is attractive for studying alternative splicing because of the efficiency and low cost per base, but short reads typical of NGS only report mRNA fragments containing one or few splice junctions. Here, we used single-molecule amplification and long-read sequencing to study the HIV-1 provirus, which is only 9700 bp in length, but encodes nine major proteins via alternative splicing. Our data showed that the clinical isolate \hivEight{} produces at least 109 different spliced RNAs, including a previously unappreciated $\approximately{}1$ kb class of messages, two of which encode new proteins. HIV-1 message populations differed between cell types, longitudinally during infection, and among T cells from different human donors. These findings open a new window on a little studied aspect of HIV-1 replication, suggest therapeutic opportunities and provide advanced tools for the study of alternative splicing. 
@@ -146,7 +154,7 @@ The wealth of new messages found here in \hivEight{} and in other HIV-1 isolates
 HIV has likely evolved to produce calibrated message populations in T cells which seem to be altered with relative ease, as in infection in HOS cells, suggesting that therapeutic disruption of correct splicing may be feasible. A few studies have begun to explore small molecule therapy to disrupt HIV-1 splicing \citep{Bakkour2007,Tranell2011}. Several factors could be responsible for the differences we observed between HOS and T cells, including hnRNP A/B and H, SC35, SF2/ASF and SRp40 \citep{Caputi2004,Zahler2004}. Inhibition of SF2/ASF has already been shown to abrogate HIV-1 replication in vitro \citep{Bakkour2007}. Thus the lability seen here for function of these factors suggests they may be attractive antiretroviral targets. 
 
 \section{Acknowledgements}
-We would like to thank the University of Pennsylvania Center for AIDS Research (CFAR) for preparation of viral stocks and isolation of primary \cdFour{} T cells; James A. Hoxie, Ronald G. Collman, Jianxin You, Robert W. Doms, Paul Bates, David Rekosh and members of the Bushman laboratory for reagents, helpful discussion and technical expertise. F.D.B., K.T., D.L., E.S., K.E.O. and R.M. conceived and designed the experiment. K.E.O. and R.C.A. carried out sample preparation and experimental validation. P.D. and J.O. performed single-molecule amplification. K.T. and S.W. performed sequencing. S.S.-M., K.E.O. and M.B. analyzed the data. K.E.O., F.D.B. and S.S.-M. wrote the manuscript. 
+We would like to thank the University of Pennsylvania Center for AIDS Research (CFAR) for preparation of viral stocks and isolation of primary \cdFour{} T cells; James A. Hoxie, Ronald G. Collman, Jianxin You, Robert W. Doms, Paul Bates, David Rekosh and members of the Bushman laboratory for reagents, helpful discussion and technical expertise.
 
 
 
