--- a/thesis/sherrill-Mix_thesis.tex
+++ b/thesis/sherrill-Mix_thesis.tex
@@ -26,9 +26,11 @@
 Rick
 
 Bushman lab Chris wetlab
+Christian Hoffmann
 collaborators
+Rithun Mukherjee, Karen Ocwieja, Nirav Malani, Troy Brady, Young Hwang, Brendan Kelly, Kyle Bittinger, Rebecca Custers-Allen, Serena Dollive, Frances Male, Jacque Young, Rohini Sinha, Sam Minot, Aubrey Bailey, Christopher Nobles, Stephanie Grunberg, Vesa Turkki, Anatoly Dryga, Eric Sherman, Greg Peterfreund, Yinghua Wu, Alice Laughlin, Sesh Sundararaman, Alexandra Bryson, Christel Chehoud, Erik Clarke, Arwa Abbas
 
-Friends in the Bushman lab and classmates in GCB.
+Friends in the Bushman lab and classmates in GCB. Fan Paul Nate Yichii
 
 My committee---Nancy Zhang, Yosephy Barash, Kristen Lynch and Michael Malim---have provided guidance and encouragement. Many faculty of GCB mentoring and teaching. Hannah Chervitz, Tiffany Barlow, Mali Skotheim, Caitlin Greig and Laurie Zimmerman for managing everything and helping manage the layers of bureacracy. Funding from the HIV Immune Networks Team (HINT) consortium P01 AI090935 and NRSA computational genomics training grant T32 HG000046. 
 
